# data-hub-gandalf

./: .coveragerc  .gitignore  CHANGELOG.md  COMPARISON.md  Dockerfile  Dockerfile.spark-connect-server  README.md  docker-compose.yml  pyproject.toml  sonar-project.properties
.claude/agents/: delta-lake-specialist.md  spark-specialist.md
.claude/rules/: main-rules.md
.github/workflows/: pr.yml  publish-coverage.yml  publish-package.yml
gandalf/: __init__.py  exceptions.py
gandalf/merge/: merge_delta_table.py  merge_types.py
gandalf/scd/: __init__.py  columns.py  config.py  constants.py  predicates.py  results.py  strategies.py
gandalf/utils/: df_utils.py  df_validations.py
scripts/: start-formatter-lint.sh  start-spark-connect-server.sh  start-tests.sh
tests/: test_df_utils.py  test_df_validations.py  test_df_validations_scd.py  test_merge_delta_table.py  test_merge_types.py  test_resources_utils.py  test_scd_columns.py  test_scd_config.py  test_scd_predicates.py  test_scd_strategies_unit.py
tests/resources/: utils.py
